# swagger.json
@@ -52,19 +52,7 @@
           "200": {
             "description": "OK - Returns an array of contacts.",
             "schema": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "array"
-                },
-                "items": {
-                  "$ref": "#/definitions/Contact"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/ContactList"
             }
           },
           "500": {
@@ -88,10 +76,10 @@
           {
             "name": "body",
             "in": "body",
-            "description": "The contact to create. All five fields are required.",
+            "description": "The contact to create. All five fields are required. Do not send an _id, MongoDB assigns it.",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/Contact"
+              "$ref": "#/definitions/ContactInput"
             },
             "example": {
               "firstName": "Sofia",
@@ -175,10 +163,10 @@
           {
             "name": "body",
             "in": "body",
-            "description": "The new values for the contact. All five fields are required.",
+            "description": "The new values for the contact. All five fields are required. Do not send an _id.",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/Contact"
+              "$ref": "#/definitions/ContactInput"
             },
             "example": {
               "firstName": "Sofia",
@@ -237,135 +225,91 @@
     }
   },
   "definitions": {
-    "Contact": {
+    "ContactInput": {
+      "description": "The five fields required to create or replace a contact. The _id is generated by MongoDB and must not be sent.",
       "type": "object",
+      "required": [
+        "firstName",
+        "lastName",
+        "email",
+        "favoriteColor",
+        "birthday"
+      ],
       "properties": {
-        "type": {
+        "firstName": {
           "type": "string",
-          "example": "object"
+          "example": "Sofia"
         },
-        "required": {
-          "type": "array",
-          "example": [
-            "firstName",
-            "lastName",
-            "email",
-            "favoriteColor",
-            "birthday"
-          ],
-          "items": {
-            "type": "string"
-          }
+        "lastName": {
+          "type": "string",
+          "example": "Ramirez"
         },
-        "properties": {
-          "type": "object",
-          "properties": {
-            "_id": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "6aa9ab499bf001dc1b95669b"
-                }
-              }
-            },
-            "firstName": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "Sofia"
-                }
-              }
-            },
-            "lastName": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "Ramirez"
-                }
-              }
-            },
-            "email": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "sofia.ramirez@example.com"
-                }
-              }
-            },
-            "favoriteColor": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "purple"
-                }
-              }
-            },
-            "birthday": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "1998-04-12"
-                }
-              }
-            }
-          }
+        "email": {
+          "type": "string",
+          "example": "sofia.ramirez@example.com"
+        },
+        "favoriteColor": {
+          "type": "string",
+          "example": "purple"
+        },
+        "birthday": {
+          "type": "string",
+          "example": "1998-04-12"
         }
       }
     },
+    "Contact": {
+      "description": "A stored contact, including the _id that MongoDB assigned on insert.",
+      "type": "object",
+      "required": [
+        "firstName",
+        "lastName",
+        "email",
+        "favoriteColor",
+        "birthday"
+      ],
+      "properties": {
+        "_id": {
+          "type": "string",
+          "description": "Assigned by MongoDB when the contact is created. Not sent by the client.",
+          "example": "6ab6bd0406634384d69bc582"
+        },
+        "firstName": {
+          "type": "string",
+          "example": "Sofia"
+        },
+        "lastName": {
+          "type": "string",
+          "example": "Ramirez"
+        },
+        "email": {
+          "type": "string",
+          "example": "sofia.ramirez@example.com"
+        },
+        "favoriteColor": {
+          "type": "string",
+          "example": "purple"
+        },
+        "birthday": {
+          "type": "string",
+          "example": "1998-04-12"
+        }
+      }
+    },
+    "ContactList": {
+      "description": "A list of stored contacts.",
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/Contact"
+      }
+    },
     "ContactId": {
+      "description": "The _id of a newly created contact, assigned by MongoDB.",
       "type": "object",
       "properties": {
-        "type": {
+        "_id": {
           "type": "string",
-          "example": "object"
-        },
-        "properties": {
-          "type": "object",
-          "properties": {
-            "_id": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "6aa9ab499bf001dc1b95669b"
-                }
-              }
-            }
-          }
+          "example": "6ab6bd0406634384d69bc582"
         }
       }
     }
